[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-macros = "0.4.2"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.42.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.134" }
json = "0.12.4"
toml = "0.8.19"
cargo-manifest = "0.17.0"
jyt = "0.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
