[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
axum-macros = "0.5.0"
shuttle-axum = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = "1.43.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
json = "0.12.4"
toml = "0.8.20"
cargo-manifest = "0.19.1"
jyt = "0.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
chrono = "0.4.40"
shuttle-shared-db = { version = "0.52.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["fs"] }
htmlescape = "0.3.1"
# cargo-lock = "10.0.1"
